--- a/static/index.html
+++ b/static/index.html
@@ -1,84 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-gray-900 text-white">
 <head>
-  <meta charset="UTF-8" />
-  <title>Face Feature Detection</title>
+  <meta charset="UTF-8">
+  <title>Facial Feature Detection</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col items-center justify-center p-4">
-  <h1 class="text-3xl font-bold text-gray-800 mb-4">👤 Face Feature Detection</h1>
-  <p class="text-gray-600 mb-4">Fix your face in the camera and click the button to capture</p>
+<body class="flex flex-col items-center justify-center h-screen p-4">
+  <h1 class="text-3xl font-bold mb-4">Facial Feature Detection</h1>
 
-  <video id="video" class="rounded-lg border border-gray-300 shadow-lg w-[500px]" autoplay></video>
+  <video id="video" autoplay class="w-96 rounded-xl border border-gray-600 mb-4"></video>
 
-  <button id="captureBtn"
-    class="mt-4 px-6 py-2 bg-blue-600 text-white font-semibold rounded hover:bg-blue-700 transition">
-    📸 Capture & Detect
+  <button onclick="captureAndSend()" class="bg-blue-600 hover:bg-blue-700 px-6 py-2 rounded text-white font-semibold mb-4">
+    Detect Face Features
   </button>
 
-  <div id="spinner" class="hidden mt-4">
-    <svg class="animate-spin h-10 w-10 text-blue-600 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
-      viewBox="0 0 24 24">
-      <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
-        stroke-width="4"></circle>
-      <path class="opacity-75" fill="currentColor"
-        d="M4 12a8 8 0 018-8v8H4z"></path>
-    </svg>
-    <p class="text-blue-600 mt-2">Detecting...</p>
-  </div>
+  <div id="loader" class="hidden animate-spin rounded-full h-10 w-10 border-b-4 border-white"></div>
 
-  <h2 class="mt-6 text-lg font-medium text-gray-700">Detection Result</h2>
-  <img id="outputImg" class="mt-2 rounded-lg border shadow-lg w-[500px]" />
-  <a id="downloadBtn"
-    class="hidden mt-4 px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition"
-    download="detected.jpg">⬇️ Download Result</a>
+  <img id="resultImg" class="mt-6 rounded-xl hidden w-96 border border-green-500" />
+  <a id="downloadBtn" href="#" download="result.jpg" class="mt-2 text-blue-400 hover:underline hidden">Download Result</a>
 
   <script>
-    const video = document.getElementById("video");
-    const captureBtn = document.getElementById("captureBtn");
-    const outputImg = document.getElementById("outputImg");
-    const spinner = document.getElementById("spinner");
-    const downloadBtn = document.getElementById("downloadBtn");
+    const video = document.getElementById('video');
+    const resultImg = document.getElementById('resultImg');
+    const loader = document.getElementById('loader');
+    const downloadBtn = document.getElementById('downloadBtn');
 
-    const ws = new WebSocket("ws://localhost:8000/ws");
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => { video.srcObject = stream; });
 
-    // Start webcam
-    navigator.mediaDevices.getUserMedia({ video: true }).then(stream => {
-      video.srcObject = stream;
-    }).catch(err => {
-      alert("Failed to access camera: " + err);
-    });
+    async function captureAndSend() {
+      loader.classList.remove('hidden');
+      resultImg.classList.add('hidden');
+      downloadBtn.classList.add('hidden');
 
-    // WebSocket response
-    ws.onmessage = (event) => {
-      const base64Image = event.data;
-      outputImg.src = 'data:image/jpeg;base64,' + base64Image;
-      outputImg.onload = () => {
-        spinner.classList.add("hidden");
-        downloadBtn.href = outputImg.src;
-        downloadBtn.classList.remove("hidden");
-      };
-    };
-
-    // Capture button logic
-    captureBtn.onclick = () => {
-      spinner.classList.remove("hidden");
-      downloadBtn.classList.add("hidden");
-
-      const canvas = document.createElement("canvas");
+      const canvas = document.createElement('canvas');
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
-      const ctx = canvas.getContext("2d");
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      canvas.getContext('2d').drawImage(video, 0, 0);
+      const blob = await new Promise(resolve => canvas.toBlob(resolve, 'image/jpeg'));
 
-      // Re-show video feed after capture (avoids black screen)
-      requestAnimationFrame(() => {
-        video.play();
+      const formData = new FormData();
+      formData.append('file', blob, 'frame.jpg');
+
+      const res = await fetch('/detect', {
+        method: 'POST',
+        body: formData
       });
 
-      const base64Image = canvas.toDataURL("image/jpeg").split(",")[1];
-      ws.send(base64Image);
-    };
+      const data = await res.json();
+      resultImg.src = data.image + "?t=" + new Date().getTime(); 
+      resultImg.classList.remove('hidden');
+      downloadBtn.href = data.image + "?t=" + new Date().getTime();
+      downloadBtn.classList.remove('hidden');
+      loader.classList.add('hidden');
+    }
   </script>
 </body>
 </html>
